# magpie

./: .gitignore  .pre-commit-config.yaml  README.md  mcp.json  pyproject.toml
.github/workflows/: ci.yml
kube/: kustomization.yaml  service.yaml
magpie/: __init__.py  cli.py  daemon.py  launchagent.py  pipeline.py  register.py
skill/: SKILL.md  magpie
tests/: test_launchagent.py  test_pipeline.py  test_register.py  test_wrapper_prompt_guard.py
tools/lint/: no_docstrings.py
